[FIX] fix access modifier in test controller , if access private hasRole() cannot invoked